fix overflow

--- a/src/styles/hmi.scss
+++ b/src/styles/hmi.scss
@@ -3,7 +3,7 @@
     margin: 125px auto;
     height: 593px;
     width: 1082px;
-    overflow-y: scroll;
+    overflow: hidden;
     font-family: "VW Text", "Arial", sans-serif;
     background-image: url("https://images.ctfassets.net/pntshaoi0gaf/qkcf5luMYSIqEMS6c2q46/50422ce73e3efaf0e01205183d3478d5/HMI.PNG");
 
